SC-1820 : service testcases fixed